--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,23 @@ body
 	box-sizing: border-box;
 }
 
-h2
+.main-h2 h2
 {
 	margin: 0;
 	padding: 10px;
 	text-align: center;
 	color: #efefef;
 	background-color: #000;
+}
+
+.userForm 
+{
+	margin: auto;
+	width: 300px;
+}
+
+.userForm form input 
+{
+	width: 80%;
+	outline: none;
 }
