--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,18 @@ body
 	outline: none;
 }
 /* From is end here */
+
+.box-1
+{
+	width: 300px;
+	margin: 10px 0 10px 10px;
+	padding: 3px;
+	box-sizing: border-box;
+	border: 1px solid #000;
+	border-radius: 4px;
+}
+
+.box-1 p 
+{
+	margin: 0;
+}
