--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,27 @@ body
 .box-1
 {
 	width: 300px;
+	margin: 10px 10px 10px 10px;
+	padding: 3px;
+	box-sizing: border-box;
+	border: 1px solid #000;
+	border-radius: 4px;
+	float: left;
+}
+
+.box-1 p,
+.box-2 p 
+{
+	margin: 0;
+}
+
+.box-2 
+{
+	width: 300px;
 	margin: 10px 0 10px 10px;
 	padding: 3px;
 	box-sizing: border-box;
 	border: 1px solid #000;
 	border-radius: 4px;
-}
-
-.box-1 p 
-{
-	margin: 0;
+	overflow: hidden;
 }
